# object3d_detector

./: CMakeLists.txt  package.xml
config/: ped_detector.yaml
launch/: object3d_detector.launch  object3d_detector.rviz  ped_detector.launch  ped_detector.rviz
libsvm/: pedestrian.model  pedestrian.range
src/: object3d_detector_node.cpp  ped_detector_node.cpp
